# FIIT_FA_SP

./: CMakeLists.txt
allocator/allocator_boundary_tags/include/: allocator_boundary_tags.h
allocator/allocator_boundary_tags/src/: allocator_boundary_tags.cpp
allocator/allocator_boundary_tags/tests/: CMakeLists.txt  allocator_boundary_tags_tests.cpp
allocator/allocator_buddies_system/include/: allocator_buddies_system.h
allocator/allocator_buddies_system/src/: allocator_buddies_system.cpp
allocator/allocator_buddies_system/tests/: CMakeLists.txt  allocator_buddies_system_tests.cpp
allocator/allocator_global_heap/src/: allocator_global_heap.cpp
allocator/allocator_global_heap/tests/: CMakeLists.txt
arithmetic/big_integer/include/: big_int.h
arithmetic/big_integer/src/: big_int.cpp
arithmetic/big_integer/tests/Karatsuba_multiplication/: CMakeLists.txt  Karatsuba_multiplication_tests.cpp
arithmetic/big_integer/tests/big_integer/: CMakeLists.txt  big_integer_tests.cpp
arithmetic/big_integer/tests/trivial_division/: CMakeLists.txt
arithmetic/big_integer/tests/trivial_multiplication/: CMakeLists.txt  trivial_multiplication_tests.cpp
arithmetic/fraction/include/: fraction.h
arithmetic/fraction/src/: fraction.cpp
arithmetic/fraction/tests/: CMakeLists.txt
associative_container/search_tree/binary_search_tree/AVL_tree/include/: AVL_tree.h
associative_container/search_tree/binary_search_tree/AVL_tree/tests/: AVL_tree_tests.cpp  CMakeLists.txt
associative_container/search_tree/binary_search_tree/include/: binary_search_tree.h
associative_container/search_tree/binary_search_tree/tests/: CMakeLists.txt  binary_search_tree_tests.cpp
associative_container/search_tree/indexing_tree/b_tree/include/: b_tree.h
associative_container/search_tree/indexing_tree/b_tree/tests/: CMakeLists.txt  b_tree_tests.cpp
associative_container/search_tree/indexing_tree/b_tree_disk/include/: b_tree_disk.hpp
associative_container/search_tree/indexing_tree/b_tree_disk/tests/: CMakeLists.txt  b_tree_disk_tests.cpp
logger/client_logger/: CMakeLists.txt
logger/client_logger/include/: client_logger.h
logger/client_logger/src/: client_logger.cpp  client_logger_builder.cpp
logger/client_logger/tests/: CMakeLists.txt  client_logger_tests.cpp
logger/server_logger/: CMakeLists.txt
logger/server_logger/include/: server_logger.h  server_logger_builder.h
logger/server_logger/src/: server_logger.cpp  server_logger_builder.cpp
logger/server_logger/tests/: CMakeLists.txt  server.cpp  server.h
